fixing overflow of the body

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -191,7 +191,7 @@ border-radius: 10px;
 @media screen and (min-width:700px) {
     
 body{
-    padding: 50px;
+    padding: 6%;
 }
 
     .wrapper{
